Fix the slight artifact when background bleeds over some rounded corners.

--- a/_includes/css/styles-extended.css
+++ b/_includes/css/styles-extended.css
@@ -200,7 +200,14 @@ img.full + em {
   border-bottom: 1px solid var(--border-color);
 }
 
+.items-list :is(ul, ol) li:first-child {
+  border-top-left-radius: var(--border-radius);
+  border-top-right-radius: var(--border-radius);
+}
+
 .items-list :is(ul, ol) li:last-child {
+  border-bottom-left-radius: var(--border-radius);
+  border-bottom-right-radius: var(--border-radius);
   border: 0 none;
 }
 
